@startuml

title __WEAPON's Class Diagram__\n

  namespace survival2d {
    namespace match.entity.weapon {
      class survival2d.match.entity.weapon.Bullet {
          ~ direction : Vector2D
          ~ id : int
          ~ isDestroyed : boolean
          ~ ownerId : String
          ~ position : Vector2D
          ~ rawPosition : Vector2D
          {static} - log : Logger
          + Bullet()
          + equals()
          + getDirection()
          + getId()
          + getOwnerId()
          + getPosition()
          + getRawPosition()
          + getShape()
          + getType()
          + hashCode()
          + isDestroyed()
          + isOutOfBound()
          + move()
          + setDestroyed()
          + setDirection()
          + setId()
          + setOwnerId()
          + setPosition()
          + setRawPosition()
          + setShape()
          + setType()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.weapon {
      class survival2d.match.entity.weapon.Gun {
          - remainBullets : int
          + Gun()
          + getRemainBullets()
          + getType()
          + getWeaponType()
          + reload()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.weapon {
      class survival2d.match.entity.weapon.Hand {
          + getWeaponType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.weapon {
      abstract class survival2d.match.entity.weapon.Weapon {
          + getAttachType()
          {abstract} + getWeaponType()
      }
    }
  }
  

  survival2d.match.entity.weapon.Bullet .up.|> survival2d.match.entity.base.Destroyable
  survival2d.match.entity.weapon.Bullet .up.|> survival2d.match.entity.base.MapObject
  survival2d.match.entity.weapon.Bullet .up.|> survival2d.match.entity.base.Movable
  survival2d.match.entity.weapon.Bullet o-- survival2d.match.entity.base.Dot : shape
  survival2d.match.entity.weapon.Bullet o-- survival2d.match.entity.config.BulletType : type
  survival2d.match.entity.weapon.Gun -up-|> survival2d.match.entity.weapon.Weapon
  survival2d.match.entity.weapon.Gun o-- survival2d.match.entity.config.GunType : type
  survival2d.match.entity.weapon.Gun o-- survival2d.match.entity.config.WeaponType : weaponType
  survival2d.match.entity.weapon.Hand -up-|> survival2d.match.entity.weapon.Weapon
  survival2d.match.entity.weapon.Hand o-- survival2d.match.entity.config.WeaponType : weaponType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
